Api Updates and response changes